@@ -2345,8 +2345,10 @@ Please choose another name.',
 Please merge them manually.'''",
 'movedto'                 => 'moved to',
 'movetalk'                => 'Move associated talk page',
-'talkpagemoved'           => 'The corresponding talk page was also moved.',
-'talkpagenotmoved'        => 'The corresponding talk page was <strong>not</strong> moved.',
+'move-subpages'           => 'Move all subpages, if applicable',
+'movepage-page-exists'    => 'The page $1 already exists and cannot be automatically overwritten.',
+'movepage-page-moved'     => 'The page $1 has been moved to $2.',
+'movepage-page-unmoved'   => 'The page $1 could not be moved to $2.',
 '1movedto2'               => '[[$1]] moved to [[$2]]',
 '1movedto2_redir'         => '[[$1]] moved to [[$2]] over redirect',
 'movelogpage'             => 'Move log',
