@@ -1581,8 +1581,10 @@ $wgMessageStructure = array(
 		'talkexists',
 		'movedto',
 		'movetalk',
-		'talkpagemoved',
-		'talkpagenotmoved',
+		'move-subpages',
+		'movepage-page-exists',
+		'movepage-page-unmoved',
+		'movepage-page-moved',
 		'1movedto2',
 		'1movedto2_redir',
 		'movelogpage',
